@@ -1,3 +1,5 @@
+Development
+	Use private dbus connection
 0.5.0
 	If filename is not specified on playlist save then assume .pls
 	Redo the path to items on playlist code
